--- a/template/zh_CN/index/index.html
+++ b/template/zh_CN/index/index.html
@@ -16,8 +16,9 @@
             <div class='download_info_container'>
                 <div class='btn_download_container'>
                     <div class='btn_download_Android'>
-                        <a href="http://itunes.apple.com/cn/app/ke-cheng-ji-hua/id505933342"><img alt="Btn_download_ios"
-                                                                                                  src="/static/img/btn_download_iOS.png"/></a>
+                        <a href="http://itunes.apple.com/cn/app/ke-cheng-ji-hua/id505933342">
+                            <img alt="Btn_download_ios" src="/static/img/btn_download_iOS.png"/>
+                        </a>
                     </div>
                     <div class='btn_download_iOS'>
                         <div style="text-align: center;vertical-align: middle">
@@ -40,10 +41,10 @@
                     <div class='icon one'></div>
                     <div class='text'>
                         <div class='main-text'>
-                            单词意思一目了然
+                            图片助记生动形象
                         </div>
                         <div class='sub-text'>
-                            千万大中初学生首选校园应用，开学必备手机课程表，学习安排尽在掌中。
+                            生动形象的图片助记，让背单词变得轻松愉快!!
                         </div>
                     </div>
                 </li>
@@ -51,10 +52,10 @@
                     <div class='icon two'></div>
                     <div class='text'>
                         <div class='main-text'>
-                            单双周、多教室
+                            丰富的词根
                         </div>
                         <div class='sub-text'>
-                            教务导入课表、一键复制同学课表多方式帮你快速搞定课表。
+                            词根覆盖率远高同类产品，让你充分了解单词的前世今生，让背单词不再是死记硬背。
                         </div>
                     </div>
                 </li>
@@ -62,10 +63,10 @@
                     <div class='icon three'></div>
                     <div class='text'>
                         <div class='main-text'>
-                            个性课表随心所欲
+                            惊心挑选的例句
                         </div>
                         <div class='sub-text'>
-                            新鲜贴纸爬上课表，日程安排简单有趣。课表皮肤自由更换，彰显自我。
+                            精心挑选，带真人发音的例句让你充分了解每个单词的使用场景，写作文再也不用死搬硬套。
                         </div>
                     </div>
                 </li>
@@ -73,10 +74,10 @@
                     <div class='icon four'></div>
                     <div class='text'>
                         <div class='main-text'>
-                            课堂消息实时传递
+                            艾宾浩斯遗忘策略
                         </div>
                         <div class='sub-text'>
-                            随时认识同学，趣味贴纸帮你轻松破冰，让沟通更加简单有趣。
+                            个性化的遗忘策略，及时的复习提醒，让你背单词更是事半功倍。
                         </div>
                     </div>
                 </li>
@@ -84,10 +85,10 @@
                     <div class='icon five'></div>
                     <div class='text'>
                         <div class='main-text'>
-                            玩转大学，处处拔尖
+                           丰富，形象的网友助记
                         </div>
                         <div class='sub-text'>
-                            更有笔记、树洞、考试倒计时、手绘地图等更多功能带你玩转大学。
+                            网友贡献的大量文字助记你可以随意选择，更可以自己定制，背单词从此不再枯燥。
                         </div>
                     </div>
                 </li>
@@ -105,49 +106,49 @@
         </div>
     </div>
 </div>
-<div class='container'>
-    <div class='announcement'>
-        <div class='news_item'>【学好单词<a href='http://huati.weibo.com/536220?from=526'>#全民校花#</a>火热开赛】2013年全国大学校园最美盛事！学好单词联合新浪校园
-            、360手机助手举办全民校花大赛！全国1000所高校，50000人气校花热力角逐全民校花！11月1日~12月20日，来学好单词，给你心中的全民校花投票吧！
-        </div>
-        <div class='news_item'>
-            【BTV北京新闻：学好单词——梦想起航的地方】BTV北京新闻栏目10月18日采访了学好单词团队，并对校园主管进行了专访，她毕业后放弃了大公司稳定的职位，加入了我们。她说：一个公司能给你实现想法的机会和发挥的空间，这就是最棒的公司。加上有爱给力的团队、舒适的工作环境，学好单词就是我梦想中最顶级的公司。<a
-                href='http://v.youku.com/v_show/id_XNjI3NTA3ODU2.html'>点击观看视频</a></div>
-        <div class='news_item'>【学好单词数据首次公开——36氪】学好单词（iOS/Android）是一款主打“课程表 + 轻社交”的课程管理应用，上线一年来已拥有全国 3000 所高校的 1000
-            万节课程数据。根据学好单词团队最新向36氪透露的数字，该产品用户总量已达 600 万，日活 100 万左右（统计期为 9 月 1 日开学至今）。这是该产品用户数据的首次对外披露。<a
-                    href='http://www.36kr.com/p/207078.html'>点击阅读全文</a></div>
-        <div class='news_item'>【学好单词3.0—小课表，大格局】学好单词新学期诚意巨献3.0全面升级——顶尖装备，处处拔尖！全新扁平化设计，更简洁、更Fashion；首创贴纸规划功能，课表变心情日历
-            ；开启精确时间模式，课前提醒更贴心……还有更多新功能等你发现！<a href='http://www.wandoujia.com/apps/fm.jihua.kecheng'>点击参与豌豆荚首发活动</a>，抱枕、T恤送不停！
-        </div>
-        <div class='news_item'>【安卓2.3.2版本将于5月9日在安卓市场首发】有新功能加入，更好玩，赶快去升级发现吧。没发现彩蛋的同学也加油了，课表页，摇一摇，别忘记点个赞。感谢安卓市场的支持！<a
-                href='http://apk.hiapk.com/mc/d?i=201'>点击下载安卓市场</a></div>
-    </div>
-    <div class='entrances_container'>
-        <div class='billboard'><a href="officers/info"><img alt="Img_ad" src="/static/img/img_ad.png"/></a></div>
-        <div class='btn_entrances_container'>
-            <div class='btn_ambassader' style="text-align: center;vertical-align: bottom">
-                    <div style="margin-top: 50px;color: white">
-                        <span>登陆</span>
-                    </div>
-                    <!--<img alt="Btn_ambassader" src="/static/img//btn_ambassader.png"/>-->
-            </div>
-            <div class='btn_school_club'  style="text-align: center;vertical-align: bottom">
-                <div style="margin-top: 50px;color: white">
-                    <span>注册</span>
-                </div>
-                <!--<a href="assns/login">-->
-                <!--<img alt="Btn_school_club" src="/static/img//btn_school_club.png"/>-->
-                <!--</a>-->
-            </div>
-            <div class='btn_my_school'  style="text-align: center;vertical-align: bottom">
-                <div style="margin-top: 50px;color: white">
-                    <span>反馈</span>
-                </div>
-                <!--<a href="schools"><img alt="Btn_my_school" src="/static/img//btn_my_school.png"/></a>-->
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div class='container'>-->
+    <!--<div class='announcement'>-->
+        <!--<div class='news_item'>【学好单词<a href='http://huati.weibo.com/536220?from=526'>#全民校花#</a>火热开赛】2013年全国大学校园最美盛事！学好单词联合新浪校园-->
+            <!--、360手机助手举办全民校花大赛！全国1000所高校，50000人气校花热力角逐全民校花！11月1日~12月20日，来学好单词，给你心中的全民校花投票吧！-->
+        <!--</div>-->
+        <!--<div class='news_item'>-->
+            <!--【BTV北京新闻：学好单词——梦想起航的地方】BTV北京新闻栏目10月18日采访了学好单词团队，并对校园主管进行了专访，她毕业后放弃了大公司稳定的职位，加入了我们。她说：一个公司能给你实现想法的机会和发挥的空间，这就是最棒的公司。加上有爱给力的团队、舒适的工作环境，学好单词就是我梦想中最顶级的公司。<a-->
+                <!--href='http://v.youku.com/v_show/id_XNjI3NTA3ODU2.html'>点击观看视频</a></div>-->
+        <!--<div class='news_item'>【学好单词数据首次公开——36氪】学好单词（iOS/Android）是一款主打“课程表 + 轻社交”的课程管理应用，上线一年来已拥有全国 3000 所高校的 1000-->
+            <!--万节课程数据。根据学好单词团队最新向36氪透露的数字，该产品用户总量已达 600 万，日活 100 万左右（统计期为 9 月 1 日开学至今）。这是该产品用户数据的首次对外披露。<a-->
+                    <!--href='http://www.36kr.com/p/207078.html'>点击阅读全文</a></div>-->
+        <!--<div class='news_item'>【学好单词3.0—小课表，大格局】学好单词新学期诚意巨献3.0全面升级——顶尖装备，处处拔尖！全新扁平化设计，更简洁、更Fashion；首创贴纸规划功能，课表变心情日历-->
+            <!--；开启精确时间模式，课前提醒更贴心……还有更多新功能等你发现！<a href='http://www.wandoujia.com/apps/fm.jihua.kecheng'>点击参与豌豆荚首发活动</a>，抱枕、T恤送不停！-->
+        <!--</div>-->
+        <!--<div class='news_item'>【安卓2.3.2版本将于5月9日在安卓市场首发】有新功能加入，更好玩，赶快去升级发现吧。没发现彩蛋的同学也加油了，课表页，摇一摇，别忘记点个赞。感谢安卓市场的支持！<a-->
+                <!--href='http://apk.hiapk.com/mc/d?i=201'>点击下载安卓市场</a></div>-->
+    <!--</div>-->
+    <!--<div class='entrances_container'>-->
+        <!--<div class='billboard'><a href="#"><img alt="Img_ad" src="/static/img/img_ad.png"/></a></div>-->
+        <!--<div class='btn_entrances_container'>-->
+            <!--<div class='btn_ambassader' style="text-align: center;vertical-align: bottom">-->
+                <!--<div style="margin-top: 50px;color: white">-->
+                    <!--<span>登陆</span>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;<img alt="Btn_ambassader" src="/static/img//btn_ambassader.png"/>&ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class='btn_school_club' style="text-align: center;vertical-align: bottom">-->
+                <!--<div style="margin-top: 50px;color: white">-->
+                    <!--<span>注册</span>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;<a href="assns/login">&ndash;&gt;-->
+                <!--&lt;!&ndash;<img alt="Btn_school_club" src="/static/img//btn_school_club.png"/>&ndash;&gt;-->
+                <!--&lt;!&ndash;</a>&ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class='btn_my_school' style="text-align: center;vertical-align: bottom">-->
+                <!--<div style="margin-top: 50px;color: white">-->
+                    <!--<span>反馈</span>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;<a href="schools"><img alt="Btn_my_school" src="/static/img//btn_my_school.png"/></a>&ndash;&gt;-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <script>
     var currentIndex = 1;
     var moving = false;
