--- a/template/zh_CN/index/index.html
+++ b/template/zh_CN/index/index.html
@@ -2,8 +2,7 @@
 <head>
     <script type="text/javascript">var NREUMQ = NREUMQ || [];
     NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
-    <meta content='CqZASYuY9f' name='baidu-site-verification'>
-    <meta content='e5a9e3a882076fe6ceb18e4b46ddbe83' name='360-site-verification'>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <link href="/static/css/home_page.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="/static/js/home_page.js" type="text/javascript"></script>
     <title>学好单词 | 背单词的利器</title>
@@ -16,7 +15,7 @@
             <div class='download_info_container'>
                 <div class='btn_download_container'>
                     <div class='btn_download_Android'>
-                        <a href="http://itunes.apple.com/cn/app/ke-cheng-ji-hua/id505933342">
+                        <a href="#">
                             <img alt="Btn_download_ios" src="/static/img/btn_download_iOS.png"/>
                         </a>
                     </div>
