--- a/template/zh_CN/index/index.html
+++ b/template/zh_CN/index/index.html
@@ -254,7 +254,7 @@
             <!-- =link_to "友情链接", "#" -->
         </div>
         <div class='link_sns_btn'>
-            <div class='sns_btn'><a href="http://e.weibo.com/yuanxijie" target="_blank"><img alt="Icon_weibo"
+            <div class='sns_btn'><a href="http://weibo.com/u/3947767629" target="_blank"><img alt="Icon_weibo"
                                                                                              src="/static/img/icon_weibo.png"/></a>
             </div>
             <!--<div class='sns_btn'><a href="http://page.renren.com/699177210"><img alt="Icon_renren" src="/static/img/icon_renren.png" /></a></div>-->
